--- a/_sass/_mobile.scss
+++ b/_sass/_mobile.scss
@@ -185,7 +185,8 @@
         &__div112{
             background-image: url(../assets/image/cloud/bitmap.png);
             background-repeat: no-repeat;
-            background-size: 100% 100%;
+            background-size: cover;
+            background-position: center center;
             object-fit: contain;
             display: inline-block;
             vertical-align: top;
